# xvc

./: .gitignore  .xvcignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build-book.sh  build-releases.sh  fix_book_gcs.py  fix_gcs_docs.py  package-lock.json  people.db  run-tests.zsh  update_test.py
.github/: dependabot.yml  release.yml
.xvc/: config.local.toml  config.toml  guid
book/: .markdownlint.json  book.toml  (+2 more)
config/: Cargo.toml  README.md
config/src/: config_params.rs  configuration.rs  error.rs  lib.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/aliases/: mod.rs
core/src/check_ignore/: mod.rs
core/src/root/: mod.rs
core/src/types/: cachetype.rs  diff.rs  hashalgorithm.rs  mod.rs  recheckmethod.rs  textorbinary.rs  xvcdigest.rs  xvcfiletype.rs  xvcmetadata.rs  xvcpath.rs  xvcroot.rs
core/src/types/xvcdigest/: collection_digest.rs  content_digest.rs  mod.rs  path_collection_digest.rs  stdout_digest.rs  url_get_digest.rs  url_head_digest.rs  xvc_metadata_digest.rs
core/src/util/: completer.rs  file.rs  git.rs  keyvaluestore.rs  mod.rs  pmp.rs  serde.rs  store.rs  xvcignore.rs
ecs/: Cargo.toml  README.md
ecs/src/: error.rs  lib.rs
ecs/src/ecs/: bstore.rs  event.rs  hstore.rs  mod.rs  r11store.rs  r1nstore.rs  rmnstore.rs  storable.rs  vstore.rs  xvcstore.rs
file/: Cargo.toml
file/src/: bring.rs  error.rs  fetch.rs  lib.rs  main.rs  pull.rs  push.rs  send.rs
file/src/bring/: mod.rs
file/src/carry_in/: mod.rs
file/src/checkout/: mod.rs
file/src/common/: compare.rs  gitignore.rs  mod.rs
file/src/copy/: mod.rs
file/src/hash/: mod.rs
file/src/list/: mod.rs
file/src/mv/: mod.rs
file/src/recheck/: mod.rs
file/src/remove/: mod.rs
file/src/send/: mod.rs
file/src/share/: mod.rs
file/src/track/: mod.rs
file/src/untrack/: mod.rs
lib/: Cargo.toml
lib/src/: api.rs  error.rs  git.rs  lib.rs  main.rs
lib/src/cli/: mod.rs
lib/src/comp/: mod.rs
lib/src/completions/: mod.rs
lib/src/init/: mod.rs
lib/templates/ref-xvc-pipeline-step-dependency-param.in/: myparams.yaml
lib/tests/: test_check_ignore.rs  test_completions.rs  test_config.rs  test_config_find_source.rs  test_config_from_env.rs  test_config_migration.rs  test_config_precedence.rs  test_core_root.rs  test_core_types.rs  test_core_util_file_pmp.rs  test_core_util_file_walker.rs  test_core_util_notify.rs  test_core_util_text_file.rs  test_core_xvc_path.rs  test_file_carry_in.rs  test_file_checkout_parallel.rs  test_file_checkout_serial.rs  test_file_copy.rs  test_file_hash.rs  test_file_list.rs  test_file_move.rs  test_file_pull.rs  test_file_recheck_parallel.rs  test_file_recheck_serial.rs  test_file_remove.rs  test_file_track_issue_104.rs  test_file_track_parallel.rs  test_file_track_serial.rs  test_file_untrack.rs  test_init_1.rs  test_init_2.rs  test_init_3.rs  test_pipeline.rs  test_pipeline_command_process.rs  test_pipeline_dag.rs  test_pipeline_export.rs  test_pipeline_export_import.rs  test_pipeline_run.rs  test_pipeline_run_deps.rs  test_remote_new_generic_rsync.rs  (+20 more)
lib/tests/common/: mod.rs
logging/: CHANGELOG.md  Cargo.toml
logging/src/: lib.rs
logging/src/logging/: mod.rs
pipeline/: Cargo.toml
pipeline/src/: error.rs  lib.rs
pipeline/src/pipeline/: command.rs  mod.rs  outs.rs  schema.rs  step.rs  util.rs
pipeline/src/pipeline/api/: dag.rs  delete.rs  export.rs  import.rs  list.rs  mod.rs  new.rs  run.rs  step_dependency.rs  step_list.rs  step_new.rs  step_output.rs  step_remove.rs  step_show.rs  step_update.rs  update.rs
pipeline/src/pipeline/kdl/: generate.rs  mod.rs  parse.rs
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
storage/: Cargo.toml
storage/src/: error.rs  lib.rs
storage/src/storage/: async_common.rs  common.rs  common_ops.rs  digital_ocean.rs  dropbox.rs  event.rs  gcs.rs  gcs_tmp.rs  generic.rs  local.rs  minio.rs  mod.rs  r2.rs  rclone.rs  rsync.rs  s3.rs  wasabi.rs
test_helper/: Cargo.toml
test_helper/src/: lib.rs  main.rs
walker/: Cargo.toml  README.md
walker/src/: abspath.rs  error.rs  glob.rs  ignore_rules.rs  lib.rs  notify.rs  pattern.rs  sync.rs  walk_parallel.rs  walk_serial.rs
walker/tests/: fuzz_ignore_rules.proptest-regressions  fuzz_ignore_rules.rs  fuzz_walk.rs
workflow_tests/: Cargo.toml  docs
workflow_tests/docs/: .gitignore
workflow_tests/src/: lib.rs  main.rs
workflow_tests/templates/README.in/: generate_data.py  requirements.txt  visualize.py
workflow_tests/templates/create-a-data-pipeline.in/: create-subsets.zsh  image_to_numpy_array.py  requirements.txt  train.py
workflow_tests/templates/intro-README.in/: generate_data.py
workflow_tests/templates/ref-xvc-pipeline-import.in/: pipeline.yaml
workflow_tests/templates/ref-xvc-pipeline-step-dependency-param.in/: myparams.json
workflow_tests/templates/ref-xvc-pipeline-step-dependency-sqlite-query.in/: people.db
workflow_tests/templates/xvc-pipeline-step-dependency-file.in/: data.txt
workflow_tests/templates/xvc-pipeline-step-dependency-param.in/: myparams.toml
workflow_tests/tests/: doc_tests.rs  test_core_alias.rs  test_core_aliases.rs  test_core_root.rs  test_core_types.rs  test_core_util_file_pmp.rs  test_core_util_file_walker.rs  test_core_util_notify.rs  test_core_util_text_file.rs  test_core_xvc_path.rs  test_file_checkout_parallel.rs  test_file_checkout_serial.rs  test_file_hash.rs  test_file_list.rs  test_file_pull.rs  test_file_recheck_parallel.rs  test_file_recheck_serial.rs  test_file_track_issue_104.rs  test_file_track_parallel.rs  test_file_track_serial.rs  test_init_1.rs  test_init_2.rs  test_init_3.rs  test_pipeline.rs  test_pipeline_command_process.rs  test_pipeline_dag.rs  test_pipeline_export.rs  test_pipeline_import.rs  test_pipeline_run.rs  test_remote_list.rs  test_remote_new_digital_ocean.rs  test_remote_new_generic_fs.rs  test_remote_new_generic_rsync.rs  test_remote_new_local.rs  test_remote_new_minio.rs  test_remote_new_s3.rs  test_remote_new_wasabi.rs  test_storage_list.rs  test_storage_new_digital_ocean.rs  test_storage_new_gcp.rs  (+12 more)
workflow_tests/tests/common/: mod.rs
(+225 files in other folders)
