[package]
name = "xvc-config"
version = "0.4.2-alpha.1"
edition = "2021"
description = "Xvc configuration management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "Apache-2.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_config"
crate-type = ["rlib"]


[dependencies]
xvc-logging = {version = "0.4.0", path = "../logging" }
xvc-walker = {version = "0.4.2-alpha.0", path = "../walker" }



## Cli and config
clap = {version = "^4.0", features=["derive"]}
configparser = "^3.0"
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.4"
blake3 = "^1.2"
blake2 = "0.10.4"
sha2 = "0.10.2"
sha3 = "0.10.1"

## Serialization
serde = { version = "^1.0", features=["derive"] }
serde-big-array = "^0.3"
serde_yaml = "^0.8"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.0.0"
toml = "^0.5"

## Caching
sled = "^0.34"

## Parallelization
rayon = "^1.5"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
jwalk = "^0.6"
walkdir = "^2.3"
scan_dir = "^0.3"
reflink = "^0.1"
relative-path = {version = "^1.5", features = ["serde"]}
path-absolutize = "^3.0"
glob = "^0.3"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored", "meta-logging-in-format"] }

## UI
comfy-table = "5.0.1"

## macros
paste = "1.0"
quote = "1.0"
syn  = {version = "1.0", features=["full", "fold"]}

## Misc
regex = "^1.5"
chrono = "^0.4"
strum = "0.24.0"
strum_macros = "0.24.0"
rand = "^0.8"
lazy_static = "^1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
hex = { version = "^0.4", features = ["serde"] }
url = {version = "^2.2", features = ["serde"] }
