[package]
name = "xvc-config"
version = "0.5.2"
edition = "2021"
description = "Xvc configuration management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "Apache-2.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_config"
crate-type = ["rlib"]


[dependencies]
xvc-logging = {version = "0.5.0", path = "../logging" }
xvc-walker = {version = "0.5.0", path = "../walker" }



## Cli and config
directories-next = "2.0"

## Serialization
serde = { version = "^1.0", features=["derive"] }
serde_yaml = "^0.9"
toml = "^0.5"

## Parallelization
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
walkdir = "^2.3"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored"] }

## Misc
regex = "^1.7"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "^1.4"
