[package]
name = "xvc-config"
version = "0.6.8"
edition = "2021"
description = "Xvc configuration management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_config"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
xvc-logging = { version = "0.6.8", path = "../logging" }
xvc-walker = { version = "0.6.8", path = "../walker" }


## Cli and config
directories-next = "2.0"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
toml = "^0.8"

## Parallelization
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
walkdir = "^2.4"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored"] }

## Misc
regex = "^1.10"
strum = "0.25.0"
strum_macros = "0.25.3"
lazy_static = "^1.4"
