[package]
name = "xvc-core"
version = "0.6.1"
edition = "2021"
description = "Xvc core for common elements for all commands"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_core"
crate-type = ["rlib"]


[dependencies]
xvc-config = { version = "0.6.0", path = "../config" }
xvc-logging = { version = "0.6.0", path = "../logging" }
xvc-ecs = { version = "0.6.0", path = "../ecs" }
xvc-walker = { version = "0.6.0", path = "../walker" }

## Cli and config
clap = { version = "^4.4", features = ["derive"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.4"
blake3 = "^1.4"
blake2 = "0.10.6"
sha2 = "0.10.7"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.1.2"
toml = "^0.8"

## Network
reqwest = { version = "^0.11", features = ["blocking", "json", "gzip"] }

## Parallelization
rayon = "^1.7"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
jwalk = "^0.8"
walkdir = "^2.4"
relative-path = { version = "^1.9", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"

## Logging and errors
thiserror = "^1.0"
anyhow = "^1.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored"] }


## macros
paste = "1.0"

## Misc
regex = "^1.9"
strum = "0.25.0"
strum_macros = "0.25.2"
lazy_static = "^1.4"
uuid = { version = "^1.4", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
cached = "^0.46"
derive_more = "^0.99"
itertools = "^0.11"

[dev-dependencies]
proptest = "^1.2"
test-case = "^3.2"
xvc-test-helper = { path = "../test_helper/" }
