[package]
name = "xvc-core"
version = "0.6.14-alpha.7"
edition = "2021"
description = "Xvc core for common elements for all commands"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_core"
crate-type = ["rlib"]

[dependencies]
xvc-config = { version = "0.6.14-alpha.7", path = "../config" }
xvc-logging = { version = "0.6.14-alpha.7", path = "../logging" }
xvc-ecs = { version = "0.6.14-alpha.7", path = "../ecs" }
xvc-walker = { version = "0.6.14-alpha.7", path = "../walker" }

## Cli and config
clap = { version = "^4.5", features = ["derive"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.5"
blake2 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = "^0.8"

## Network
reqwest = { version = "^0.12", features = ["blocking", "json", "gzip"] }

## Parallelization
rayon = "^1.10"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## Git Operations
gix = "^0.69"

## File system
subprocess = "^0.2"
jwalk = "^0.8"
walkdir = "^2.5"
relative-path = { version = "^1.9", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"
which = "^7.0"

## Logging and errors
thiserror = "^2.0"
anyhow = "^1.0"
log = "^0.4"
peak_alloc = "^0.2"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored"] }


## macros
paste = "1.0"

## Misc
regex = "^1.10"
strum = "^0.26"
strum_macros = "^0.26"
lazy_static = "^1.5"
uuid = { version = "^1.10", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
cached = "^0.54"
derive_more = { version = "^1.0", features = ["full"] }
itertools = "^0.14"


[dev-dependencies]
xvc-test-helper = { version = "0.6.14-alpha.7", path = "../test_helper/" }
proptest = "^1.5"
test-case = "^3.3"
