[package]
name = "xvc-core"
version = "0.7.1-alpha.0"
edition = "2021"
description = "Xvc core for common elements for all commands"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_core"
crate-type = ["rlib"]

[dependencies]
xvc-config = { version = "0.7.1-alpha.0", path = "../config" }
xvc-logging = { version = "0.7.1-alpha.0", path = "../logging" }
xvc-ecs = { version = "0.7.1-alpha.0", path = "../ecs" }
xvc-walker = { version = "0.7.1-alpha.0", path = "../walker" }

## Cli and config
clap = { version = "^4.5", features = ["derive"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.8"
blake2 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = { version = "^0.9",  features = ["serde", "parse", "display"]}

## Network
reqwest = { version = "^0.13", features = ["blocking", "json", "gzip"] }

## Parallelization
rayon = "^1.11"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## Git Operations
gix = "^0.77"

## Utilities to complete commands
clap_complete = { version = "^4.5", features = ["unstable-dynamic"] }

## File system
subprocess = "^0.2"
jwalk = "^0.8"
walkdir = "^2.5"
relative-path = { version = "^2.0", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"
which = "^8.0"

## Logging and errors
thiserror = "^2.0"
anyhow = "^1.0"
log = "^0.4"
peak_alloc = "^0.3"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored"] }


## macros
paste = "1.0"

## Misc
regex = "^1.12"
strum = "^0.27"
strum_macros = "^0.27"
lazy_static = "^1.5"
uuid = { version = "^1.19", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
cached = "^0.56"
derive_more = { version = "^2.1", features = ["full"] }
itertools = "^0.14"


[dev-dependencies]
xvc-test-helper = { version = "0.7.1-alpha.0", path = "../test_helper/" }
proptest = "^1.9"
test-case = "^3.3"
