[package]
name = "xvc-ecs"
version = "0.6.1"
edition = "2021"
description = "Entity-Component System for Xvc"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_ecs"
crate-type = ["rlib"]


[dependencies]
xvc-logging = { version = "0.6.0", path = "../logging" }

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.1.2"

## Parallelization
rayon = "^1.7"
crossbeam-channel = "^0.5"

## Logging and errors
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored"] }
thiserror = "^1.0"

## Misc
lazy_static = "^1.4"
rand = "^0.8"


[dev-dependencies]
tempdir = "^0.3"
jwalk = "^0.8"

[package.metadata.cargo-udeps.ignore]
normal = ["xvc-logging", "test-case", "tempdir"]
