[package]
name = "xvc-file"
version = "0.4.2-alpha.6"
edition = "2021"
description = "File tracking, versioning, upload and download functions for Xvc"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "Apache-2.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_file"
crate-type = ["rlib"]

[[bin]]
name = "xvc-file"
test = true
bench = true


[dependencies]
xvc-logging = {version = "0.4.2-alpha.6",  path = "../logging" }
xvc-config = {version = "0.4.2-alpha.0",  path = "../config" }
xvc-core = {version = "0.4.2-alpha.0",  path = "../core" }
xvc-ecs = {version = "0.4.2-alpha.6",  path = "../ecs" }
xvc-walker = {version = "0.4.2-alpha.0",  path = "../walker" }
xvc-storage = {version = "0.4.2-alpha.0",  path = "../storage" }


## Cli and config
clap = {version = "^4.0", features=["derive"]}
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.4"
blake3 = "^1.3"
blake2 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.1.1"
toml = "^0.5"

## Caching
sled = "^0.34"

## Parallelization
rayon = "^1.6"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"
dashmap = {version = "^5", features= ["serde", "rayon", "send_guard"]}

## File system
jwalk = "^0.6"
walkdir = "^2.3"
reflink = "^0.1"
relative-path = { version = "^1.7", features = ["serde"] }
path-absolutize = "^3.0"
glob = "^0.3"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
anyhow = "^1.0"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored", "meta-logging-in-format"] }



## macros
paste = "1.0"

## Misc
subprocess = "^0.2"
regex = "^1.7"
chrono = "^0.4"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "^1.4"
uuid = { version = "^1.2", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.3", features = ["serde"] }
itertools = "^0.10"
derive_more = "^0.99"


[dev-dependencies]
xvc-test-helper = {path = "../test_helper/"}
shellfn = "^0.1"
