[package]
name = "xvc-file"
version = "0.6.17"
edition = "2021"
description = "File tracking, versioning, upload and download functions for Xvc"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]


[lib]
name = "xvc_file"
crate-type = ["rlib"]

[[bin]]
name = "xvc-file"
test = true
bench = true

[dependencies]
# xvc-logging = { version = "0.6.17-alpha.2", path = "../logging" }
# xvc-config = { version = "0.6.17-alpha.2", path = "../config" }
# xvc-ecs = { version = "0.6.17-alpha.2", path = "../ecs" }
# xvc-walker = { version = "0.6.17-alpha.2", path = "../walker" }
xvc-core = { version = "0.6.17", path = "../core" }
xvc-storage = { version = "0.6.17", path = "../storage", default-features = false }


## Cli and config
clap = { version = "^4.5", features = ["derive", "string"] }
clap_complete = { version = "^4.5", features = ["unstable-dynamic"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.8"
blake2 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = { version = "^0.9",  features = ["serde", "parse", "display"]}

## Parallelization
rayon = "^1.11"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"
dashmap = { version = "^6.1", features = ["serde", "rayon"] }

## File system
jwalk = "^0.8"
walkdir = "^2.5"
reflink = { version = "^0.1", optional = true }
relative-path = { version = "^2.0", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"

## Logging and errors
thiserror = "^2.0"
log = "^0.4"
anyhow = "^1.0"
peak_alloc = "^0.3"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored"] }


## macros
paste = "1.0"

## Misc
humantime = "^2.3"
subprocess = "^0.2"
regex = "^1.12"
chrono = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"
lazy_static = "^1.5"
uuid = { version = "^1.19", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
itertools = "^0.14"
# FIXME: These are mostly used in file/src/common/mod.rs and TextOrBinary wrapper. 
derive_more = { version = "^2.1", features = [
  "from",
  "display",
  "as_ref",
  "deref",
  "from_str",
] }
parse-size = "^1.1"

[features]
default = []
reflink = ["dep:reflink"]

[dev-dependencies]
xvc-test-helper = { version = "0.6.17", path = "../test_helper/" }
shellfn = "^0.2"
