[package]
name = "xvc"
version = "0.6.8"
edition = "2021"
description = "An MLOps tool to manage data files and pipelines on top of Git"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]
readme = "../README.md"

[lib]
name = "xvc"
crate-type = ["rlib"]

[[bin]]
name = "xvc"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
xvc-config = { version = "0.6.8", path = "../config" }
xvc-core = { version = "0.6.8", path = "../core" }
xvc-logging = { version = "0.6.8", path = "../logging" }
xvc-ecs = { version = "0.6.8", path = "../ecs" }
xvc-file = { version = "0.6.8", path = "../file" }
xvc-pipeline = { version = "0.6.8", path = "../pipeline" }
xvc-walker = { version = "0.6.8", path = "../walker" }
xvc-storage = { version = "0.6.8", path = "../storage" }


## Cli and config
clap = { version = "^4.4", features = ["derive", "cargo"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.5"
blake2 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.1.2"
toml = "^0.8"

## Parallelization
rayon = "^1.8"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
subprocess = "^0.2"
reflink = "^0.1"
relative-path = { version = "^1.9", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"
which = "^4.4"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored"] }
anyhow = "^1.0"

## UI
comfy-table = "7.1.0"

## macros
paste = "1.0"

## Misc
regex = "^1.10"
chrono = "^0.4"
strum = "0.25.0"
strum_macros = "0.25.3"
lazy_static = "^1.4"
uuid = { version = "^1.6", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
git-version = "^0.3"

## Mostly for testing
assert_cmd = "^2.0"
assert_fs = "^1.1"
predicates = "^3.0"


[features]
default = ["s3", "minio", "r2", "gcs", "wasabi", "digital-ocean"]
s3 = ["xvc-storage/s3"]
minio = ["xvc-storage/minio"]
r2 = ["xvc-storage/r2"]
gcs = ["xvc-storage/gcs"]
wasabi = ["xvc-storage/wasabi"]
digital-ocean = ["xvc-storage/digital-ocean"]


[dev-dependencies]
fs_extra = "^1.3"
globset = "^0.4"
jwalk = "^0.8"
proptest = "^1.4"
shellfn = "^0.1"
test-case = "^3.3"
xvc-test-helper = { version = "0.6.8", path = "../test_helper/" }
