[package]
name = "xvc"
version = "0.6.9-alpha.2"
edition = "2021"
description = "An MLOps tool to manage data files and pipelines on top of Git"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]
readme = "../README.md"

[lib]
name = "xvc"
crate-type = ["rlib"]

[[bin]]
name = "xvc"
path = "src/main.rs"

[dependencies]
xvc-config = { version = "0.6.9-alpha.2", path = "../config" }
xvc-core = { version = "0.6.9-alpha.2", path = "../core" }
xvc-logging = { version = "0.6.9-alpha.2", path = "../logging" }
xvc-ecs = { version = "0.6.9-alpha.2", path = "../ecs" }
xvc-file = { version = "0.6.9-alpha.2", path = "../file" }
xvc-pipeline = { version = "0.6.9-alpha.2", path = "../pipeline" }
xvc-walker = { version = "0.6.9-alpha.2", path = "../walker" }
xvc-storage = { version = "0.6.9-alpha.2", path = "../storage" }


## Cli and config
clap = { version = "^4.4", features = ["derive", "cargo"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.5"
blake2 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.1.2"
toml = "^0.8"

## Parallelization
rayon = "^1.8"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
subprocess = "^0.2"
reflink = "^0.1"
relative-path = { version = "^1.9", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"
which = "^6.0"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored"] }
anyhow = "^1.0"

## UI
comfy-table = "7.1.0"

## macros
paste = "1.0"

## Misc
regex = "^1.10"
chrono = "^0.4"
strum = "^0.26"
strum_macros = "^0.26"
lazy_static = "^1.4"
uuid = { version = "^1.6", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
git-version = "^0.3"

## Mostly for testing
assert_cmd = "^2.0"
assert_fs = "^1.1"
predicates = "^3.0"


[features]
default = ["s3", "minio", "r2", "gcs", "wasabi", "digital-ocean", "reflink"]
s3 = ["xvc-storage/s3"]
minio = ["xvc-storage/minio"]
r2 = ["xvc-storage/r2"]
gcs = ["xvc-storage/gcs"]
wasabi = ["xvc-storage/wasabi"]
digital-ocean = ["xvc-storage/digital-ocean"]
bundled-sqlite = ["xvc-pipeline/bundled-sqlite"]
reflink = ["xvc-file/reflink"]
test-s3 = ["s3"]
test-minio = ["minio"]
test-r2 = ["r2"]
test-gcs = ["gcs"]
test-wasabi = ["wasabi"]
test-digital-ocean = ["digital-ocean"]
test-rsync = []
test-generic-rsync = []
test-ci = [
  "test-s3",
  "test-minio",
  "test-r2",
  "test-digital-ocean",
  "test-rsync",
  "test-generic-rsync",
]

[dev-dependencies]
anyhow = "^1.0"
assert_cmd = "^2.0"
assert_fs = "^1.1"
escargot = "^0.5"
fs_extra = "^1.3"
globset = "^0.4"
jwalk = "^0.8"
predicates = "^3.0"
proptest = "^1.4"
shellfn = "^0.1"
test-case = "^3.3"
trycmd = "^0.15"
which = "^6.0"
xvc-test-helper = { version = "0.6.9-alpha.2", path = "../test_helper/" }
