[package]
name = "xvc"
version = "0.7.1-alpha.2"
edition = "2021"
description = "An MLOps tool to manage data files and pipelines on top of Git"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]
readme = "../README.md"

[lib]
name = "xvc"
crate-type = ["rlib"]

[[bin]]
name = "xvc"
path = "src/main.rs"

[dependencies]
# xvc-config = { version = "0.6.17-alpha.2", path = "../config" }
xvc-core = { version = "0.7.1-alpha.2", path = "../core" }
# xvc-logging = { version = "0.6.17-alpha.2", path = "../logging" }
# xvc-ecs = { version = "0.6.17-alpha.2", path = "../ecs" }
xvc-file = { version = "0.7.1-alpha.2", path = "../file" }
xvc-pipeline = { version = "0.7.1-alpha.2", path = "../pipeline" }
# xvc-walker = { version = "0.6.17-alpha.2", path = "../walker" }
xvc-storage = { version = "0.7.1-alpha.2", path = "../storage", default-features = false }

## Cli and config
clap = { version = "^4.5", features = ["derive", "cargo", "unstable-ext"] }
clap_complete = { version = "^4.5", features = ["unstable-dynamic"] }
clap_complete_nushell = { version = "^4.5", features = [] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.8"
blake2 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = { version = "^0.9",  features = ["serde", "parse", "display"]}


## Parallelization
rayon = "^1.11"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
subprocess = "^0.2"
relative-path = { version = "^2.0", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"

## Logging and errors
thiserror = "^2.0"
log = "^0.4"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored"] }
anyhow = "^1.0"

## UI
comfy-table = "7.2.1"

## macros
paste = "1.0"

## Misc
regex = "^1.12"
chrono = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"
lazy_static = "^1.5"
uuid = { version = "^1.19", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
git-version = "^0.3"

## Mostly for testing
assert_cmd = "^2.1"
assert_fs = "^1.1"
predicates = "^3.1"


[features]
default = ["s3", "minio", "r2", "gcs", "wasabi", "digital-ocean", "rclone"]
# Dropped reflink from default features in 0.6.13
reflink = ["xvc-file/reflink"]
rclone = ["xvc-storage/rclone"]
s3 = ["xvc-storage/s3"]
minio = ["xvc-storage/minio"]
r2 = ["xvc-storage/r2"]
gcs = ["xvc-storage/gcs"]
wasabi = ["xvc-storage/wasabi"]
digital-ocean = ["xvc-storage/digital-ocean"]
bundled-sqlite = ["xvc-pipeline/bundled-sqlite"]
bundled-openssl = ["xvc-storage/bundled-openssl"]
bundled-rclone = ["xvc-storage/bundled-rclone"]
test-s3 = ["s3"]
test-minio = ["minio"]
test-r2 = ["r2"]
test-gcs = ["gcs"]
test-wasabi = ["wasabi"]
test-digital-ocean = ["digital-ocean"]
test-rclone = ["rclone"]
test-rsync = []
test-generic-rsync = []
test-generic-rclone = []
test-ci = [
  "test-s3",
  "test-minio",
  "test-r2",
  "test-wasabi",
  "test-rsync",
  "test-rclone",
  "test-generic-rsync",
  "test-generic-rclone",
]

[dev-dependencies]
anyhow = "^1.0"
assert_cmd = "^2.1"
assert_fs = "^1.1"
escargot = "^0.5"
fs_extra = "^1.3"
# NOTE: 0.4 removes Glob struct and this should be handled with care
fast-glob = "^0.3"
jwalk = "^0.8"
predicates = "^3.1"
proptest = "^1.9"
shellfn = "^0.2"
test-case = "^3.3"
trycmd = "^0.15"
which = "^8.0"
xvc-test-helper = { version = "0.7.1-alpha.2", path = "../test_helper/" }
