[package]
name = "xvc-pipeline"
version = "0.6.8"
edition = "2021"
description = "Xvc data pipeline management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]

[lib]
name = "xvc_pipeline"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
xvc-config = { version = "0.6.8", path = "../config" }
xvc-core = { version = "0.6.8", path = "../core" }
xvc-ecs = { version = "0.6.8", path = "../ecs" }
xvc-logging = { version = "0.6.8", path = "../logging" }
xvc-walker = { version = "0.6.8", path = "../walker" }
xvc-file = { version = "0.6.8", path = "../file" }

## Cli and config
clap = { version = "^4.4", features = ["derive"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.5"
blake2 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.1.2"
toml = "^0.8"

## Caching
cached = "^0.46"

## Parallelization
rayon = "^1.8"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
relative-path = { version = "^1.9", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
anyhow = "^1.0"
### meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.6", features = ["colored", "meta-logging-in-format"] }

## Networking
reqwest = { version = "^0.11", features = ["blocking", "json", "gzip"] }

## UI
comfy-table = "7.1.0"

## Graphs
petgraph = "^0.6"
tabbycat = "0.1.3"

## Misc
subprocess = "^0.2"

sad_machine = "^1.0"
regex = "^1.10"
chrono = "^0.4"
strum = "0.25.0"
strum_macros = "0.25.3"
lazy_static = "^1.4"
uuid = { version = "^1.6", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
itertools = "^0.12"
derive_more = "^0.99"

[dev-dependencies]
xvc-test-helper = { version = "0.6.8", path = "../test_helper/" }
test-case = "^3.3"
