[package]
name = "xvc-pipeline"
version = "0.6.12-alpha.3"
edition = "2021"
description = "Xvc data pipeline management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]

[lib]
name = "xvc_pipeline"
crate-type = ["rlib"]

[features]
default = []
bundled-sqlite = ["rusqlite/bundled"]

[dependencies]
xvc-config = { version = "0.6.12-alpha.3", path = "../config" }
xvc-core = { version = "0.6.12-alpha.3", path = "../core" }
xvc-ecs = { version = "0.6.12-alpha.3", path = "../ecs" }
xvc-logging = { version = "0.6.12-alpha.3", path = "../logging" }
xvc-walker = { version = "0.6.12-alpha.3", path = "../walker" }
xvc-file = { version = "0.6.12-alpha.3", path = "../file", default-features = false }

## Cli and config
clap = { version = "^4.5", features = ["derive"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.5"
blake2 = "^0.10"
sha2 = "^0.10"
sha3 = "^0.10"

## Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = "^0.8"

## Caching
cached = "^0.53"

## Parallelization
rayon = "^1.10"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
relative-path = { version = "^1.9", features = ["serde"] }
path-absolutize = "^3.1"
glob = "^0.3"

## Logging and errors
thiserror = "^1.0"
log = "^0.4"
anyhow = "^1.0"

## meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored", "meta-logging-in-format"] }

## sqlite
## TODO: Add feature flags for sqlite when bundling needed
rusqlite = "^0.32"
fallible-iterator = "^0.3"

## Networking
reqwest = { version = "^0.11", features = ["blocking", "json", "gzip"] }

## UI
comfy-table = "7.1.1"

## Graphs
petgraph = "^0.6"
tabbycat = "0.1.3"

## Misc
subprocess = "^0.2"

sad_machine = "^1.0"
regex = "^1.10"
chrono = "^0.4"
strum = "^0.26"
strum_macros = "^0.26"
lazy_static = "^1.5"
uuid = { version = "^1.10", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
itertools = "^0.13"
# FIXME: Use features selectively
derive_more = { version = "^1.0", features = ["full"] }

[dev-dependencies]
xvc-test-helper = { version = "0.6.12-alpha.3", path = "../test_helper/" }
test-case = "^3.3"
