[package]
name = "xvc-pipeline"
version = "0.7.1-alpha.5"
edition = "2024"
description = "Xvc data pipeline management"
authors = ["Emre Şahin <contact@emresahin.net>"]
license = "GPL-3.0"
homepage = "https://xvc.dev"
repository = "https://github.com/iesahin/xvc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["file", "devops", "git", "versioning", "mlops"]

[lib]
name = "xvc_pipeline"
crate-type = ["rlib"]

[features]
default = []
bundled-sqlite = ["rusqlite/bundled"]

[dependencies]
# xvc-config = { version = "0.6.17-alpha.2", path = "../config" }
xvc-core = { version = "0.7.1-alpha.5", path = "../core" }
# xvc-ecs = { version = "0.6.17-alpha.2", path = "../ecs" }
# xvc-logging = { version = "0.6.17-alpha.2", path = "../logging" }
# xvc-walker = { version = "0.6.17-alpha.2", path = "../walker" }
xvc-file = { version = "0.7.1-alpha.5", path = "../file", default-features = false }

## Cli and config
clap = { version = "^4.5", features = ["derive"] }
clap_complete = { version = "^4.5", features = ["unstable-dynamic"] }
directories-next = "2.0"

## Hashing
seahash = "^4.1"
byteorder = "^1.5"
blake3 = "^1.8"
blake2 = "^0.10"
sha2 = "^0.11"
sha3 = "^0.12"

## Serialization
kdl = "^6.3"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "1.3.0"
toml = { version = "^1.1",  features = ["serde", "parse", "display"]}

## Caching
cached = "^2.0"

## Parallelization
rayon = "^1.11"
crossbeam-channel = "^0.5"
crossbeam = "^0.8"

## File system
relative-path = { version = "^2.0", features = ["serde"] }
path-absolutize = "^4.0"
glob = "^0.3"

## Logging and errors
thiserror = "^2.0"
log = "^0.4"
anyhow = "^1.0"

## meta-logging-in-format is required for sled: https://github.com/spacejam/sled/issues/1384
fern = { version = "^0.7", features = ["colored", "meta-logging-in-format"] }

## sqlite
## TODO: Add feature flags for sqlite when bundling needed
## Pinned to 0.39: 0.40+ uses the unstable `cfg_select!` macro (rust-lang/rust#115585)
## and fails to build on stable Rust. Remove the pin once that lands on stable
## and rusqlite adopts it in a released, MSRV-compatible way.
rusqlite = "=0.39.0"
fallible-iterator = "^0.3"

## Networking
reqwest = { version = "^0.13", features = ["blocking", "json", "gzip"] }

## UI
comfy-table = "7.2.1"

## Graphs
petgraph = "^0.8"
tabbycat = "0.1.3"

## Misc
subprocess = "^1.2"

sad_machine = "^1.0"
regex = "^1.12"
chrono = "^0.4"
strum = "^0.28"
strum_macros = "^0.28"
lazy_static = "^1.5"
uuid = { version = "^1.19", features = ["serde", "v4", "fast-rng"] }
hex = { version = "^0.4", features = ["serde"] }
url = { version = "^2.5", features = ["serde"] }
itertools = "^0.15"
# FIXME: Use features selectively
derive_more = { version = "^2.1", features = ["full"] }

[dev-dependencies]
xvc-test-helper = { version = "0.7.1-alpha.5", path = "../test_helper/" }
test-case = "^3.3"
