[package]
name = "xvc-py"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xvc"
crate-type = ["cdylib"]

[dependencies]
xvc_rust = { package = "xvc", path = "../lib" }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
